Issue1186-3 Updates to weblog-entry related tables.